# nexus-video-platform

./: .env.example  .env.production.example  .env.production.template  .eslintrc.cjs  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.temporal.yml  package-lock.json  package.json  patch_demo.js  query.sql  query.ts
.github/workflows/: build.yml  ci.yml
client-mobile/: App.tsx  package.json
client-mobile/screens/: LiveViewScreen.tsx  LoginScreen.tsx
client-web/: .env.development  build_errors.txt  errors.txt  index.html  nginx.conf  patch_index_css.py  project_structure.txt  tsc_VideoFeed_errors.txt  vite.config.ts  vitest.config.ts
client-web/public/: manifest.json
client-web/scripts/: download-samples.ps1  patch_colors.py
client-web/src/: index.css  main.tsx
deploy/: nginx.conf
deploy/consul/: docker-compose.yml
design/: Phase5_CrossMediaFeedMock.tsx  gemini3_ui_prompts.md
docker/: fiber-entrypoint.sh  fiber-testnet-config.yml
docs/: DEPENDENCY_AUDIT.md  ENVIRONMENT_AND_SECRETS.md  METRICS_AND_GRAFANA.md  OPTIMIZATION_AND_UPGRADE_PLAN.md  ROADMAP_DETAILED.md  architecture.md  git-stats-20251021-212852.md
knowledge-base/: README.md
monitoring/: grafana-dashboard.json
scripts/: audit-report.sh  db.ps1  kill-dev-ports.ps1  release.ps1  restore.sh
tools/: img_to_code.ts  list_models.ts
video-platform/: .gitignore  .prettierrc  docker-compose.fiber.yml  docker-compose.yml  package-lock.json  package.json  playwright.config.ts
video-platform/services/search/rust/: Cargo.toml
video-platform/services/search/rust/src/: main.rs
(+495 files in other folders)
